add environment configuration files and utility functions for storage and language support

--- a/index.html
+++ b/index.html
@@ -4,31 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Primary Meta Tags -->
-    <title>viraj</title>
-    <meta name="title" content="Vite + React + TS">
-    <meta name="description" content="A modern web application built with Vite, React, and TypeScript for fast development and performance.">
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourwebsite.com/" />
-    <meta property="og:title" content="Vite + React + TS" />
-    <meta property="og:description" content="A modern web application built with Vite, React, and TypeScript for fast development and performance." />
-    <meta property="og:image" content="https://yourwebsite.com/og-image.png" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://yourwebsite.com/" />
-    <meta property="twitter:title" content="Vite + React + TS" />
-    <meta property="twitter:description" content="A modern web application built with Vite, React, and TypeScript for fast development and performance." />
-    <meta property="twitter:image" content="https://yourwebsite.com/twitter-image.png" />
-
-    <!-- Additional Meta Tags -->
-    <meta name="keywords" content="Vite, React, TypeScript, modern web development, performance" />
-    <meta name="author" content="Your Name" />
-    <meta name="robots" content="index, follow" />
-    <meta name="language" content="English" />
+    <title>Vite + React + TS</title>
   </head>
   <body>
     <div id="root"></div>
